--- a/vignettes/bootstrap.Rmd
+++ b/vignettes/bootstrap.Rmd
@@ -23,7 +23,7 @@ knitr::opts_chunk$set(
 ```
 
 
-[Bootstrap](https://getbootstrap.com/) is a popular HTML, CSS and JS framework.  It has made it's way into the world of R in many forms, perhaps most notably via [R Markdown](https://rmarkdown.rstudio.com/) and [R Shiny](https://shiny.rstudio.com/).  `mayotheme` contains a customized Bootstrap theme, making it easy to integrate into your own documents and applications.  The preview below is based on the work of [Bootswatch](https://bootswatch.com/).  
+[Bootstrap](https://getbootstrap.com/) is a popular HTML, CSS and JS framework.  It has made its way into the world of R in many forms, perhaps most notably via [R Markdown](https://rmarkdown.rstudio.com/) and [R Shiny](https://shiny.rstudio.com/).  `mayotheme` contains a customized Bootstrap theme, making it easy to integrate into your own documents and applications.  The preview below is based on the work of [Bootswatch](https://bootswatch.com/).  
 
 These components can be used whether you are creating a static report, interactive documents, or a full application.  For more details on how, please reference the Bootsrap and R Shiny documentation.  
 
