--- a/README.Rmd
+++ b/README.Rmd
@@ -14,7 +14,7 @@ knitr::opts_chunk$set(
 ```
 # mayotheme
 
-The goal of mayotheme is to host commonly used Mayo Clinic colors, logos, and css files.  It is used in mayodown and mayoshiny.  
+The goal of mayotheme is to host commonly used Mayo Clinic colors, logos, and css files.  It is used in [mayodown](https://overdodactyl.github.io/mayodown), mayoshiny, and [mayotemplate](https://overdodactyl.github.io/mayotemplate/).  
 
 ## Installation
 
