--- a/README.Rmd
+++ b/README.Rmd
@@ -14,6 +14,10 @@ knitr::opts_chunk$set(
 ```
 # mayotheme
 
+<!-- badges: start -->
+  [![Travis build status](https://travis-ci.org/overdodactyl/mayotheme.svg?branch=master)](https://travis-ci.org/overdodactyl/mayotheme)
+  <!-- badges: end -->
+
 The goal of mayotheme is to host commonly used Mayo Clinic colors, logos, and css files.  It is used in [mayodown](https://overdodactyl.github.io/mayodown), mayoshiny, and [mayotemplate](https://overdodactyl.github.io/mayotemplate/).  
 
 ## Installation
