--- a/README.Rmd
+++ b/README.Rmd
@@ -16,7 +16,8 @@ knitr::opts_chunk$set(
 
 <!-- badges: start -->
   [![Travis build status](https://travis-ci.org/overdodactyl/mayotheme.svg?branch=master)](https://travis-ci.org/overdodactyl/mayotheme)
-  <!-- badges: end -->
+[![Lifecycle: experimental](https://img.shields.io/badge/lifecycle-experimental-orange.svg)](https://www.tidyverse.org/lifecycle/#experimental)
+<!-- badges: end -->
 
 The goal of mayotheme is to host commonly used Mayo Clinic colors, logos, and css files.  It is used in [mayodown](https://overdodactyl.github.io/mayodown), mayoshiny, and [mayotemplate](https://overdodactyl.github.io/mayotemplate/).  
 
