--- a/vignettes/bootstrap.Rmd
+++ b/vignettes/bootstrap.Rmd
@@ -28,7 +28,8 @@ knitr::opts_chunk$set(
 These components can be used whether you are creating a static report, interactive documents, or a full application.  For more details on how, please reference the Bootsrap and R Shiny documentation.  
 
 ```{r echo=FALSE}
-htmltools::includeHTML("bootstrap_demo.html")
+demo <- system.file("bootstrap_demo.html", package = "mayotheme")
+htmltools::includeHTML(demo)
 ```
 
 
